# naverblog

./: .env.example  .gitignore  CLAUDE.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/presets/: personas.json
pages/: 1_스타일_편집.py  2_레퍼런스_글_관리.py  3_워터마크.py
scripts/: crawl_blog.py
src/naverblog/: __init__.py  config.py  crawler.py  database.py  formatter.py  image_gen.py  llm.py  models.py  pipeline.py  watermark.py
src/naverblog/prompts/: builder.py
src/naverblog/prompts/templates/: blog_general.j2  blog_listicle.j2  blog_review.j2  system.j2
src/naverblog/skills/: __init__.py  base.py  blog_style.py  reference_posts.py  search.py
